midterm/backend/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: midterm-app
    role: backend

spec:
  volumes:
  - name: app-config
    configMap:
      name: app-config

  securityContext:
    fsGroup: 2000
    seccompProfile:
      type: RuntimeDefault

  containers:
  - name: application
    image: application:1.1
    imagePullPolicy: Never
    ports:
    - name: http-port
      containerPort: 80

    volumeMounts:
    - name: app-config
      mountPath: /etc/config
      readOnly: true
    resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
    securityContext:
      runAsNonRoot: true
      runAsUser: 1000
      runAsGroup: 3000
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
          - ALL

    readinessProbe:
      httpGet:
        path: /api/health
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 10
      timeoutSeconds: 2
      failureThreshold: 3
      successThreshold: 1
    livenessProbe:
      httpGet:
        path: /api/health
        port: 80
      initialDelaySeconds: 15
      periodSeconds: 20
      timeoutSeconds: 2
      failureThreshold: 5
      successThreshold: 1
